<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mycompany</groupId>
    <artifactId>tiendaReloj</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <exec.mainClass>com.mycompany.tiendareloj.TiendaReloj</exec.mainClass>
    </properties>
    
    <dependencies>
  
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
	    <groupId>com.mysql</groupId>
	    <artifactId>mysql-connector-j</artifactId>
	    <version>9.0.0</version>
    </dependency>
    
  
 <!--https://mvnrepository.com/artifact/com.konghq/unirest-java-->
	 <dependency>
		 <groupId>com.google.code.gson</groupId>
		 <artifactId>gson</artifactId>
		 <version>2.10.1</version>
	 </dependency>
	 
	 <dependency>
		 <groupId>org.json</groupId>
		 <artifactId>json</artifactId>
		 <version>20230227</version><!--Olaúltimaversióndisponible-->
	 </dependency>
	 
	 <dependency>
		 <groupId>io.github.cdimascio</groupId>
		 <artifactId>dotenv-java</artifactId>
		 <version>3.0.2</version>
	 </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
  
</project>